src/yini_test/cases/golden/lenient/valid/strings/triple-quoted-raw-string.yini
@yini

^ Strings
message = R"""Line one
Line two with \n kept raw
Line three"""
