src/yini_test/cases/golden/lenient/invalid/strings/unterminated-string.yini
@yini

^ Strings
message = "this string never closes
